# STILL

./: .gitignore  README.md  pyproject.toml  research.md
config/: base.yaml
configs/: qwen3_235b_256k_niah.yaml  qwen3_4b_8x.yaml  smoke.yaml
data/: README.md
docs/: changes_from_original_design.md  experiment_results_report.md  model_and_training.md  model_architecture_summary.md  neural_kv_compressor_scientific_report.md  still_original.md
reports/: kv_cache_numeric_results_2026-06-27.md  kv_cache_paper_results_2026-06-27.md  niah_qwen3_235b_256k_compare.jsonl  niah_qwen3_235b_256k_compare_summary.json  niah_qwen3_235b_256k_report.md  niah_qwen3_32b_2026-06-09.md  niah_qwen3_32b_2026-06-09_trials3_summary.json  niah_qwen3_32b_x8_compactor_2026-06-09.md  niah_qwen3_32b_x8_compactor_generation_2026-06-09_fixedlex.jsonl  niah_qwen3_32b_x8_compactor_generation_2026-06-09_fixedlex_summary.json  niah_qwen3_32b_x8_compactor_test_2026-06-09_summary.json  performance_2026-06-08_6k_rocm.md  qwen3_235b_256k_preflight_2026-06-10.md  qwen3_235b_256k_work_detail.md  rewrite_legacy_parity_2026-06-21.md  ruler_200k_qwen3_235b_2507_acceptance.md  ruler_200k_qwen3_235b_a22b_smoke.md  vlm_compaction_qwen3_vl_2026-06-27.md
scripts/: archive_vlm_compactor_result.py  check_performance_target.py  check_rocm_env.py  check_ruler_200k_target.py  check_ruler_coverage.py  check_vlm_compactor_target.py  create_initial_compactor_checkpoint.py  download_model.py  evaluate.py  evaluate_ce_utilization.py  evaluate_checkpoint.py  evaluate_niah.py  evaluate_vlm.py  evaluate_vlm_compactor.py  (+18 more)
(+96 files in other folders)
