[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "neural-kv"
version = "0.1.0"
description = "Clean PyTorch Lightning implementation of neural KV-cache compaction for Hugging Face causal LMs."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=2.0,<3",
  "PyYAML>=6.0,<7",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.0,<2",
  "datasets>=3.0,<5",
  "einops>=0.8,<1",
  "hf-transfer>=0.1.9,<1",
  "huggingface-hub>=0.30,<1",
  "lightning>=2.5,<3",
  "safetensors>=0.5,<1",
  "sentencepiece>=0.2,<1",
  "torch==2.11.0 ; sys_platform == 'linux'",
  "transformers>=4.51,<5",
  "triton-rocm==3.6.0 ; sys_platform == 'linux'",
]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neural_kv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
